[package]
name = "HappyLightingRustTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.1.2"
rand = "0.8.5"